--- a/Purple Robot/build.gradle
+++ b/Purple Robot/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.0.0-beta4'
     }
 }
 
@@ -33,7 +33,7 @@ android {
     }
 
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '23.0.2'
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
